[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/prefabs/seek_player.gd" type="Script" id=1]

[node name="SeekPlayer" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 2, 4, 384, 616, 584, 320, 709, 1, 592, -376, 376, -640 )

[connection signal="body_entered" from="." to="." method="_on_seek_player_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_seek_player_body_exited"]
